apps/rollout/base/route-active.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollout-bluegreen-active
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: rollout-bluegreen-active
