apps/rollout/base/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollout-bluegreen-preview
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: rollout-bluegreen-preview
